# Strathweb.Samples.RustFromCSharp

./: README.md
csharp-host/: Program.cs  csharp-host.csproj
rust-lib/: Cargo.toml  build.rs
rust-lib/src/: lib.rs  rust-lib.udl
