[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
qrcodegen = "1.8.0"
thiserror = "1.0"
polars = "0.37.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19.0"
thread_local = "1.1.8"
uniffi = { version = "0.25.0", features=["build"] }

[build-dependencies]
uniffi_build = "0.25.0"
